Fix/style: Re-arranging code to fir the column>row>column format of bootstrap more accurately. Have also re-styled some of the margins in north tour and all heading text types to have a continuous spacing across the website.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ body{
 }
 
 .hero-text{
-    top: 35%;
+    top: 45%;
     text-shadow: -1px -1px 0 rgba(0,0,0,0.25), 1px -1px 0 rgba(0,0,0,0.25),-1px 1px 0 rgba(0,0,0,0.25), 1px 1px 0 rgba(0,0,0,0.25);
 }
 
@@ -53,7 +53,6 @@ body{
     font-family: "Exo", sans-serif;
     font-weight: 400;
     color:#fff;
-    padding: 5px 12px;
     text-shadow: -1px -1px 0 rgba(0,0,0,0.25), 1px -1px 0 rgba(0,0,0,0.25),-1px 1px 0 rgba(0,0,0,0.25), 1px 1px 0 rgba(0,0,0,0.25);
 }
 
@@ -95,9 +94,11 @@ body{
     color: #fff;
 }
 
+/*
 .tour-background h3{
     padding-top:2rem;
 }
+*/
 
 .tour-anchor{
     padding: 0px;
@@ -125,9 +126,11 @@ body{
 }
 
 /*------------Forms-------------*/
+/*
 .contact-us-layout h3{
     padding: 1rem;
 }
+*/
 
 .btn-green{
     background-color: #27402D;
@@ -160,16 +163,16 @@ body{
 
 
 /*------------General layout-------------*/
-.container{
-    margin-top:2rem;
-    margin-bottom: 2rem;
-
+.btn-position{
+    margin-bottom: 1.5rem;
 }
 
 /*--------------Typography---------------*/
 
 h1, h2, h3, h4, h5, h6 {
     font-family: "Exo", sans-serif;
+    margin-bottom: 1rem;
+    margin-top: 2rem;
 }
 
 p{
@@ -184,29 +187,16 @@ p{
 }
 
 .tour-image-group{
-    padding-top:1rem;
-    padding-bottom: 1rem;
-}
-
-.tour-heading h2{
     padding-bottom: 1rem;
 }
 
 .tour-itinerary{
-    padding: 1rem 0;
+    padding-bottom: 1rem;
 }
 
 .tour-itinerary:nth-child(odd){
     background-color: #27402D;
     color: #fff;
-}
-
-.tour-itinerary h3{
-    margin-top: 1rem;
-}
-
-.tour-itinerary p{
-    margin: 0 10px;
 }
 
 .tourpage-carousel{
